awaitで実行してレンダリングをストップさせる

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
+<head></head>
 <body>
-  <script async
+  <script await
     data-id="AnyID"
     data-token="cGFzc3dvcmQ="
-    src="https://confident-payne-68eb1e.netlify.app/pw_auth.js">
+    src="/js/pw_auth.js">
   </script>
-  <h1>Password Authentication</h1>
+  <h1>Authentication Complete</h1>
 </body>
 </html>
